Updated info-color [testing-branch]

--- a/lecture051.html
+++ b/lecture051.html
@@ -20,7 +20,7 @@
       //console.log(/^[a-z][0-9a-z]*[a-z]$/.test('a1b2c'));
     </script>
 
-    <p>The current date/time is <span id="dateTime"></span>.</p>
+    <p>The current date/time is <span id="dateTime"></span></p>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.25.3/moment-with-locales.min.js"></script>
 
@@ -29,7 +29,7 @@
       document.getElementById("dateTime").innerHTML = moment().format(
         "dddd, MMMM Do YYYY, h:mm:ss a"
       );
-      document.getElementById("dateTime").style.backgroundColor = "#0099CC";
+      document.getElementById("dateTime").style.backgroundColor = "#33b5e5";
     </script>
 
     <!--Event Listner DOM-->
