update UI [lecture02]

--- a/lecture02.html
+++ b/lecture02.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
     <head>
         <link type="text/css" rel="stylesheet" href="css/style.css">
@@ -10,4 +10,63 @@
         <p>This is Second Paragraph</p>
         <a href="lecture01.html">Lecture01</a>
     </body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Google-fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Bootstrap-css -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    />
+    <title>Page-One</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="jumbotron">
+        <h1 class="display-4">Making the Web Better</h1>
+        <p class="lead">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates,
+          exercitationem.
+        </p>
+        <hr class="my-4" />
+        <div class="contextual">
+          <div class="p-3 mb-2 bg-primary text-white">
+            This is the Second paragraph
+          </div>
+          <div class="p-3 mb-2 bg-secondary text-white">
+            This is the Second paragraph
+          </div>
+          <div class="p-3 mb-2 bg-success text-white">
+            This is the Second paragraph
+          </div>
+          <div class="p-3 mb-2 bg-danger text-white">
+            This is the Second paragraph
+          </div>
+          <div class="p-3 mb-2 bg-warning text-dark">
+            This is the Second paragraph
+          </div>
+          <div class="p-3 mb-2 bg-info text-white">
+            This is the Second paragraph
+          </div>
+        </div>
+        <a
+          href="lecture01.html"
+          class="btn btn-primary btn-lg active mt-3"
+          role="button"
+          aria-pressed="true"
+          >Lecture01</a
+        >
+      </div>
+    </div>
+  </body>
 </html>
